2015-03-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (ReadPDFImage): Applied patch by Chris Gilling such
	that '-define pdf:stop-on-error=true' will stop PDF processing
	immediately upon an error.

2015-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/animate.c (MagickXAnimateImages): Silence Coverity 44736
	"Dereference null return value".  Also fixed apparent memory leak
	that Coverity did not notice.

	* coders/fits.c (ReadFITSImage): Silence Coverity 10209
	"Dereference before null check".

	* magick/color_lookup.c (ReadColorConfigureFile): Silence Coverity
	44743 "Dereference before null check".

	* magick/xwindow.c (MagickXMakeImage): Silence Coverity 44745
	"Dereference before null check".

	* coders/pict.c (ReadPICTImage): Hopefully address consequences of
	Coverity 10292 "Untrusted loop bound" although it will likely
	still complain.

	* magick/utility.c (LocaleCompare, LocaleNCompare): Try to create
	an implementation that Coverity won't label an "tainted sink", and
	therefore result in a Coverity "Use of untrusted scalar value"
	report whenever a string from an external source is compared.  The
	original implementations are not believed to be faulty.

2015-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ProcessBatchOptions): Silence Coverity 10080
	"Buffer not null terminated".

	* magick/widget.c (MagickXConfirmWidget): Silence Coverity 10089
	"Copy-paste error".  This is an amazing find by Coverity.

	* magick/xwindow.c (MagickXImportImage): Silence Coverity 10207
	"Array compared against 0".

	* magick/quantize.c (GrayscalePseudoClassImage): Silence Coverity
	10256 "Wrong sizeof argument".

	* coders/tiff.c (ReadTIFFImage): Fix Coverity 44747 and 44748
	"Extra sizeof expression".

2015-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Magick++/Include.h (Magick): Fix compilation with
	'clang' under Linux.  Build was broken yesterday.
