@@ -40,7 +40,9 @@
 <ul class="simple">
 <li>coders/pdf.c (ReadPDFImage): Applied patch by Chris Gilling such
 that '-define pdf:stop-on-error=true' will stop PDF processing
-immediately upon an error.</li>
+immediately upon an error.
+(ReadPDFImage): PDF options concatenation should be more secure
+against buffer overflow.</li>
 </ul>
 </blockquote>
 <p>2015-03-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
